feat : 인증 서비스 및 redis 인증 repository 추가 - api-client : 인증 게시글 데이터 파싱 - redis 에서 user인증 정보 저장 하거나 가져오는 repository 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     active: prod
 --- #api-server
 lost-ark:
-  user-auth-host: "https://lostark.game.onstove.com/Community/Free/Views/"
+  user-auth-host: "https://lostark.game.onstove.com/Community/Free/Views/{url_number}"
 --- #swagger
 springdoc:
   api-docs:
@@ -17,3 +17,6 @@ springdoc:
     tagsSorter: alpha
     operations-sorter: alpha
     display-request-duration: true
+---
+policy:
+  character-authentication-sec: 180 #인증 번호 유효 시간 180초
