chore : api key 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
     active: prod
 --- #api-server
 lost-ark:
-  user-auth-host: "https://lostark.game.onstove.com/Community/Free/Views/"
+  api-key: ${LOST-ARK-API-KEY}
+  user-auth-host: "https://lostark.game.onstove.com/Community/Free/Views/{url_number}"
 --- #swagger
 springdoc:
   api-docs:
