refactor : [#30] 리뷰 반영 refactor

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
 --- #api-server
 lost-ark:
   user-auth-host: "https://lostark.game.onstove.com/Community/Free/Views/"
+  market-api: "https://developer-lostark.game.onstove.com/markets/items"
 --- #swagger
 springdoc:
   api-docs:
