--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,7 @@ spring:
 --- #api-server
 lost-ark:
   api-key: ${LOST-ARK-API-KEY}
+  market-api: "https://developer-lostark.game.onstove.com/markets/items"
   user-auth-host: "https://lostark.game.onstove.com/Community/Free/Views/{url_number}"
 --- #swagger
 springdoc:
